# Registration

./: .flake8  .gitmodules  .pre-commit-config.yaml  README.md
server/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  config.example.yml  events.example.yml  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 34225d7355cf_add_email_auth_code_table.py  ce9b5f903ab7_add_email_auth_table.py  dacb9b683ce1_initial_revision.py
server/src/oes/registration/: __init__.py  app.py  auth.py  config.py  database.py  docs.py  http_client.py  log.py  pricing.py  util.py
server/src/oes/registration/auth/: account_service.py  credential_service.py  email_auth_service.py  entities.py  handlers.py  models.py  oauth.py  oauthtmp.py  scope.py  service.py  token.py  user.py  webauthn.py
server/src/oes/registration/entities/: __init__.py  access_code.py  auth.py  base.py  cart.py  checkout.py  event_stats.py  hook.py  registration.py
server/src/oes/registration/hook/: __init__.py  entities.py  models.py  service.py
server/src/oes/registration/models/: __init__.py  auth.py  (+8 more)
server/tests/: conftest.py  test_pricing.py  test_util.py
server/tests/auth/: test_entities.py  test_models.py
server/tests/auth/oauth/: test_scope.py  test_token.py
server/tests/entities/: test_access_code.py  test_cart.py  test_hook.py  test_payment.py  test_registration.py
server/tests/hook/: test_entities.py  test_models.py  test_service.py
server/tests/models/: test_auth.py  test_cart.py  test_event.py  test_pricing.py  test_registration.py
server/tests/payment/: conftest.py  test_payment_service.py
server/tests/serialization/: test_common.py  test_config.py  test_data.py  test_json.py
server/tests/services/: test_cart.py  test_registration.py
server/tests/test_data/: events.yml
(+174 files in other folders)
